# spring-ai-docs-assistant

./: LICENSE  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
src/: config.py  create_index.py  data_ingest.py  embedding.py  ingest_data.ipynb  playground.ipynb  startup.py
src/api/: app.py  models.py  routes.py
src/chat/: service.py
src/ingest/: create_index.py  data_ingest.py  embedding.py
src/llm/: client.py  prompt.py
src/monitoring/: metrics.py
src/retrieval/: hybrid_search.py
src/ui/: app.py
src/ui/pages/: monitoring.py
tests/embedding/: test_embedding.py
tests/ingest/: test_data_ingest.py
tests/llm/: test_prompt.py
tests/retrieval/: test_hybrid_search.py
