[project]
name = "spring-ai-docs-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.15,<9",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "sentence-transformers>=5.6.0",
]
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
