[project]
name = "spring-ai-docs-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=8.15,<9",
    "fastapi>=0.139.2",
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.2",
    "requests>=2.28.1",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "uvicorn>=0.51.0",
]
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
